# LLM-RAG

./: README.md  pyproject.toml  rag_chatbot.py
data sources/: wikipedia_naruto.txt  wikipedia_snake.txt
experiment/: LLM RAG experiment.ipynb  Run_Streamlit_of_LLM_RAG.ipynb
pages/: document_embedding.py
pages/backend/: doc_embedding.py  rag_functions.py
vector store/naruto/: index.faiss  index.pkl
vector store/naruto_snake/: index.faiss  index.pkl
vector store/snake/: index.faiss  index.pkl
